--- a/app/src/main/res/drawable/basic_shape2.xml
+++ b/app/src/main/res/drawable/basic_shape2.xml
@@ -6,6 +6,7 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp"/>
-    <stroke android:width="0.1dp" android:color="#DAE3DADA"/>
-    <solid android:color="#FFFFFF"/>
+
+    <stroke android:color="@color/greyish" android:width="1dp"/>
+    <size android:height="200dp" android:width="200dp"/>
 </shape>
