--- a/app/src/main/res/drawable/card_drop_shape.xml
+++ b/app/src/main/res/drawable/card_drop_shape.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape  android:shape="rectangle"  xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="15dp" />
+    <corners android:radius="5dp" />
     <padding
         android:bottom="10dp"
         android:left="10dp"
         android:right="10dp"
         android:top="10dp"/>
-    <stroke android:width="0.01dp" android:color="#DAE3DADA"/>
-    <solid android:color="#f1f1f9"/>
+    <stroke android:width="0.5dp" android:color="#8A91BD"/>
+<!--    <solid android:color="#f1f1f9"/>-->
 </shape>
