--- a/app/src/main/res/drawable/design_shape.xml
+++ b/app/src/main/res/drawable/design_shape.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape  android:shape="rectangle"  xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="50dp" />
+    <corners android:radius="8dp" />
     <padding
         android:bottom="10dp"
         android:left="10dp"
         android:right="10dp"
         android:top="10dp"/>
 <!--    <stroke android:width="0.0001dp" android:color="#DAE3DADA"/>-->
-    <solid android:color="#525298"/>
+    <solid android:color="#3667E6"/>
 </shape>
