--- a/app/src/main/res/layout/activity_add_bank_details.xml
+++ b/app/src/main/res/layout/activity_add_bank_details.xml
@@ -6,6 +6,7 @@
     android:overScrollMode="never"
     android:scrollbars="none"
     android:layout_height="match_parent"
+    android:background="@color/limeWhite"
     tools:context=".add_bank_details">
     <RelativeLayout
         android:id="@+id/mainLayout"
@@ -30,16 +31,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="start|center">
+
                 <TextView
                     android:id="@+id/header_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
                     android:text="Add Bank Details"
                     android:textColor="@color/black"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="300dp"
                     android:layout_height="300dp"
@@ -144,18 +147,35 @@
 
 
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <Button
+                        android:layout_weight="1"
+                        android:id="@+id/otp_continue_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/basic_shape"
+                        android:text="Continue"
+                        android:textColor="@color/black" />
+                    <Button
+                        android:layout_weight="1"
+                        android:id="@+id/otp_skip_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/basic_shape2"
+                        android:text="Do it Later"
+                        android:textColor="@color/black" />
 
-                <Button
-                    android:id="@+id/otp_continue_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:background="@drawable/basic_shape"
-                    android:text="Continue"
-                    android:textColor="@color/activitybg" />
 
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
 
