--- a/app/src/main/res/layout/activity_bank_transfer.xml
+++ b/app/src/main/res/layout/activity_bank_transfer.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:overScrollMode="never"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".bankTransfer">
     <LinearLayout
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -32,7 +34,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:text="Bank Transfer"
+                    android:text="Amount To Transfer"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -40,6 +42,31 @@
             </LinearLayout>
 
         </RelativeLayout>
+        <EditText
+            android:maxLength="6"
+            android:hint="00.00"
+            android:textColorHint="@color/black"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:theme="@style/myStyle"
+            android:background="@null"
+            android:id="@+id/ammoutText"
+            android:textColor="@color/black"
+            android:fontFamily="@font/poppins_medium"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="35sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PAY TO ACCOUNT"
+            android:layout_gravity="start"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:gravity="center"
             android:layout_gravity="center"
@@ -50,19 +77,19 @@
             android:layout_marginBottom="12dp"
             android:id="@+id/transaction"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:layout_below="@id/headingLayout"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
-                    android:padding="10dp"
-                    android:layout_margin="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_gravity="center"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:src="@drawable/hdfc" />
                 <LinearLayout
                     android:layout_marginTop="2dp"
@@ -75,23 +102,24 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Gopal Meena" />
+                        android:text="@string/demoUserName" />
                     <TextView
+                        android:textSize="13sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="A/C - 55456147"
+                        android:text="@string/demoAc"
                         android:fontFamily="@font/poppins_medium"/>
                 </LinearLayout>
 
                 <ImageView
                     android:padding="5dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/down" />
+                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
 
             </LinearLayout>
 
@@ -99,63 +127,41 @@
         <LinearLayout
             android:layout_gravity="center"
             android:gravity="center"
-            android:background="@drawable/home_activity_shape_all"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="12dp"
             android:orientation="vertical">
-            <EditText
-                android:maxLength="6"
-                android:hint="00.00"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:theme="@style/myStyle"
-                android:background="@null"
-                android:id="@+id/ammoutText"
-                android:textColor="#3E44C5"
-                android:fontFamily="@font/poppins_medium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="40sp"/>
             <com.crepaid.keyboard.custom_keyboard
                 android:orientation="vertical"
                 android:id="@+id/customKeyboard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
             <LinearLayout
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:id="@+id/swipePayButton"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:background="@drawable/design_shape">
-                <ImageView
-                    android:layout_gravity="center"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
-                    android:src="@drawable/ic_right"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginStart="8dp"/>
 
                 <TextView
+                    android:layout_margin="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_marginStart="-30dp"
-                    android:letterSpacing="0.2"
+                    android:letterSpacing="0.05"
                     android:fontFamily="@font/poppins"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:textColor="@color/white"
-                    android:text="Swipe Right"
+                    android:text="Make Payment"
                     android:textStyle="bold"/>
 
             </LinearLayout>
