--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -15,7 +15,7 @@
             <Button
                 android:id="@+id/btn_1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:elevation="0dp"
@@ -23,33 +23,33 @@
                 android:textStyle="bold"
                 android:text="1"
                 android:textColor="#8D8D8E"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:theme="@null" />
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="2"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_2"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="3"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_3"/>
         </LinearLayout>
         <LinearLayout
@@ -61,42 +61,42 @@
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="4"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_4"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="5"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_5"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="6"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_6"/>
         </LinearLayout>
         <LinearLayout
@@ -108,42 +108,42 @@
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="7"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_7"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="8"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_8"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="9"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_9"/>
         </LinearLayout>
 
@@ -156,42 +156,42 @@
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="."
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_dot"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="0"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_0"/>
             <Button
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
-                android:text="del"
-                android:textSize="25sp"
+                android:text="@string/q"
+                android:textSize="20sp"
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:id="@+id/btn_del"/>
         </LinearLayout>
     </LinearLayout>
