--- a/app/src/main/res/layout/activity_add_bank_details.xml
+++ b/app/src/main/res/layout/activity_add_bank_details.xml
@@ -33,6 +33,7 @@
                 android:gravity="start|center">
 
                 <TextView
+                    android:fontFamily="@font/poppins"
                     android:id="@+id/header_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,6 +66,7 @@
 
 
                 <EditText
+                    android:textSize="15sp"
                     android:id="@+id/ifscCode"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -75,10 +77,11 @@
                     android:gravity="center|start"
                     android:hint="Bank IFSC Code"
                     android:inputType="textCapCharacters"
-                    android:maxLength="10"
+                    android:maxLength="11"
                     android:padding="10dp" />
 
                 <EditText
+                    android:textSize="15sp"
                     android:id="@+id/accountNumber"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -89,10 +92,11 @@
                     android:gravity="center|start"
                     android:hint="Bank Account Number"
                     android:inputType="numberDecimal"
-                    android:maxLength="10"
+                    android:maxLength="18"
                     android:padding="10dp" />
 
                 <androidx.appcompat.widget.AppCompatSpinner
+                    android:textSize="15sp"
                     android:id="@+id/spinnerView"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -104,6 +108,7 @@
                     android:visibility="visible" />
 
                 <EditText
+                    android:textSize="15sp"
                     android:id="@+id/idNumber"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -152,6 +157,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <Button
+                        android:padding="10dp"
                         android:layout_weight="1"
                         android:id="@+id/otp_continue_button"
                         android:layout_width="match_parent"
@@ -163,6 +169,7 @@
                         android:text="Continue"
                         android:textColor="@color/black" />
                     <Button
+                        android:padding="10dp"
                         android:layout_weight="1"
                         android:id="@+id/otp_skip_button"
                         android:layout_width="match_parent"
