--- a/app/src/main/res/layout/activity_bank_transfer.xml
+++ b/app/src/main/res/layout/activity_bank_transfer.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:gravity="center"
+                android:gravity="start"
                 android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -31,10 +31,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="0dp"
                     android:drawablePadding="0dp"
-                    android:fontFamily="@font/poppins_medium"
+                    android:fontFamily="@font/poppins"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:text="Amount To Transfer"
+                    android:text="Bank Transfer"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -42,22 +42,31 @@
             </LinearLayout>
 
         </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AMOUNT TO TRANSFER"
+            android:layout_gravity="start"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="13dp" />
         <EditText
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:maxLength="6"
-            android:hint="00.00"
-            android:textColorHint="@color/black"
+            android:hint="Enter Amount"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:theme="@style/myStyle"
-            android:background="@null"
+            android:background="@drawable/home_activity_shape_all"
             android:id="@+id/ammoutText"
             android:textColor="@color/black"
             android:fontFamily="@font/poppins_medium"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="35sp"/>
+            android:textSize="25sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,13 +74,13 @@
             android:layout_gravity="start"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="13dp"
             android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:gravity="center"
             android:layout_gravity="center"
             android:elevation="1dp"
-            android:background="@drawable/card_drop_shape"
+            android:background="@drawable/home_activity_shape_all"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
@@ -102,12 +111,12 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/demoUserName" />
                     <TextView
-                        android:textSize="13sp"
+                        android:textSize="10sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/demoAc"
@@ -134,33 +143,32 @@
             android:layout_marginBottom="12dp"
             android:orientation="vertical">
             <com.crepaid.keyboard.custom_keyboard
+                android:background="@drawable/keyboard_layout_bg"
                 android:orientation="vertical"
                 android:id="@+id/customKeyboard"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <LinearLayout
                 android:id="@+id/swipePayButton"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
-                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="bottom|center"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@drawable/design_shape">
+                android:background="@drawable/button_shape_3">
 
                 <TextView
-                    android:layout_margin="8dp"
+                    android:layout_margin="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:letterSpacing="0.05"
                     android:fontFamily="@font/poppins"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
                     android:text="Make Payment"
                     android:textStyle="bold"/>
 
