--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,12 +47,13 @@
                 android:layout_gravity="center"
                 android:gravity="center">
                 <ImageView
-
+                    android:padding="30dp"
+                    android:layout_margin="20dp"
                     android:layout_weight="1"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_login" />
+                    android:src="@drawable/m_insert" />
             </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
@@ -77,6 +78,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:textSize="15sp"
                     android:id="@+id/mobileText"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -125,8 +127,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:background="@drawable/basic_shape"
-                    android:text="@string/send_otp_button_text"
-                    android:textColor="#000000" />
+                    android:text="@string/send_otp_button_text" />
 
             </LinearLayout>
         </RelativeLayout>
