--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -13,32 +13,35 @@
             android:orientation="horizontal">
 
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:id="@+id/btn_1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:elevation="0dp"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="1"
-                android:textColor="#8D8D8E"
+                android:textColor="@color/custom_keyboard_col"
                 android:textSize="20sp"
                 android:theme="@null" />
             <Button
-                android:textColor="#8D8D8E"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:textColor="@color/custom_keyboard_col"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="2"
                 android:textSize="20sp"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_2"/>
             <Button
-                android:textColor="#8D8D8E"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:textColor="@color/custom_keyboard_col"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="3"
@@ -46,10 +49,10 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_3"/>
         </LinearLayout>
         <LinearLayout
@@ -57,7 +60,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
-                android:textColor="#8D8D8E"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:textColor="@color/custom_keyboard_col"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:text="4"
@@ -65,12 +69,13 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_4"/>
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -79,31 +84,34 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_5"/>
+
             <Button
-                android:textColor="#8D8D8E"
-                android:fontFamily="@font/poppins"
-                android:textStyle="bold"
-                android:text="6"
-                android:textSize="20sp"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:id="@+id/btn_6"
                 style="@null"
-                android:theme="@null"
-                android:elevation="0dp"
-                android:background="@color/white"
-                android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
-                android:id="@+id/btn_6"/>
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:background="@drawable/keyboard_shape"
+                android:elevation="0dp"
+                android:fontFamily="@font/poppins"
+                android:text="6"
+                android:textColor="#8D8D8E"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:theme="@null" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -112,12 +120,13 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_7"/>
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -126,12 +135,13 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_8"/>
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -140,10 +150,10 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_9"/>
         </LinearLayout>
 
@@ -152,6 +162,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -160,12 +171,13 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_dot"/>
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -174,12 +186,13 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_0"/>
             <Button
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:textColor="#8D8D8E"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -188,10 +201,10 @@
                 style="@null"
                 android:theme="@null"
                 android:elevation="0dp"
-                android:background="@color/white"
+                android:background="@drawable/keyboard_shape"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="80dp"
                 android:id="@+id/btn_del"/>
         </LinearLayout>
     </LinearLayout>
