--- a/app/src/main/res/layout/t_list.xml
+++ b/app/src/main/res/layout/t_list.xml
@@ -2,7 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="5dp"
     app:cardBackgroundColor="@android:color/transparent"
     android:layout_gravity="center"
     app:cardElevation="0dp"
@@ -12,7 +14,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="60dp"
         android:background="@drawable/home_activity_shape_all"
         android:orientation="horizontal">
 
@@ -24,10 +26,10 @@
 
             <ImageView
                 android:id="@+id/Timage"
-                android:layout_marginStart="10dp"
                 android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/check"/>
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/ic_mright" />
         </LinearLayout>
         <LinearLayout
             android:layout_marginStart="20dp"
@@ -39,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:textSize="15sp"
                     android:id="@+id/Ttype"
                     android:textColor="@color/black"
                     android:fontFamily="@font/poppins_medium"
@@ -48,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:text="Bank Transfer"/>
                 <TextView
+                    android:textSize="13sp"
                     android:id="@+id/Tdate"
                     android:gravity="start"
                     android:layout_gravity="start"
@@ -63,6 +67,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textSize="13sp"
                 android:id="@+id/Tamount"
                 android:gravity="center"
                 android:layout_gravity="center"
