--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="primary_yellow">#FFC900</color>
     <color name="activitybg">#F4F7FF</color>
     <color name="home_shape_color">#F6F8FD</color>
+    <color name="custom_keyboard_col">#8D8D8E</color>
 </resources>
