--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,19 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+<!--        <item name="android:navigationBarColor">#00F4F7FF</item>-->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/limeWhite</item>
         <!-- Customize your theme here. -->
+<!--        <item name="android:windowBackground">@drawable/layer</item>-->
+    </style>
+    <style name="StripeToolBarStyle.noColor" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/limeWhite</item>
+        <item name="colorPrimaryVariant">@color/limeWhite</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorSecondaryVariant">@color/activitybg</item>
+        <item name="colorOnSecondary">@color/activitybg</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/limeWhite</item>
     </style>
     <style name="myStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/red</item>
