--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:background="@color/limeWhite"
     android:layout_height="match_parent"
-    tools:context=".Home_Activity">
+    tools:context=".UI.Home_Activity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -39,6 +39,7 @@
                   app:drawableLeftCompat="@drawable/ic_baseline_chevron_left_24"
                   app:drawableTint="@color/black" />
               <ImageView
+                  android:id="@+id/popUpMenu"
                   android:layout_marginEnd="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
