--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     android:background="@color/limeWhite"
-    tools:context="MainActivity">
+    tools:context=".UI.MainActivity">
     <RelativeLayout
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
